# recipe-book

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  book.tex  common.tex  netlify.toml  requirements.txt  requirements_lock.txt  single.tex
.github/workflows/: main.yml
recipes/: banana_bread.tex  camp_food_1.tex  chocolate_chip_cookies.tex  cornbread.tex  crusty_white_bread.tex  dal.tex  drinks.tex  drunken_chicken.tex  pancakes.tex  pumpkin_bread.tex  spaghetti_carbonara.tex
recipes/desserts/: brownies.tex  chocolate_chip_cookies.tex
tools/: BUILD.bazel  latex_info.py  single.py  single.tex.jinja2  status.py
website/: BUILD.bazel  index.html.jinja2  index_generator.py
