module(name = "recipe_book", version = "1.0")

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_python", version = "1.3.0")
bazel_dep(name = "bazel_latex")

git_override(
    module_name = "bazel_latex",
    remote = "https://github.com/ProdriveTechnologies/bazel-latex.git",
    commit = "c552d5bd09e4e9e49040ede60dd97720acb1cbb7",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11", is_default = True)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_recipe_book",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
    requirements_windows = "//:requirements_windows.txt",
)
use_repo(pip, "pip_recipe_book")
