load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bazel_latex",
    integrity = "sha256-a+QLpt/efi4u0kF+Rn0Z5BWCFKqti8Op6PIpoKcrxHM=",
    strip_prefix = "bazel-latex-f9e1532513760f1379396e55e9e38013869d2a8c",
    url = "https://github.com/kleinpa/bazel-latex/archive/f9e1532513760f1379396e55e9e38013869d2a8c.tar.gz",
)

load("@bazel_latex//:repositories.bzl", "latex_repositories")

latex_repositories()

register_toolchains("@bazel_latex//:latex_toolchain_x86_64-linux")
